# ChangeLog for dev-lang/v8
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.72 2011/08/07 15:20:37 maekke Exp $

  07 Aug 2011; Markus Meier <maekke@gentoo.org> v8-3.3.10.22.ebuild:
  x86 stable, bug #377629

  04 Aug 2011; Markos Chandras <hwoarang@gentoo.org> v8-3.3.10.22.ebuild:
  Stable on amd64 wrt bug #377629

*v8-3.3.10.22 (03 Aug 2011)

  03 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.3.4.ebuild,
  +v8-3.3.10.22.ebuild:
  Version bump for stable channel release. Remove old.

*v8-3.3.10.21 (21 Jul 2011)

  21 Jul 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.2.10.15.ebuild,
  +v8-3.3.10.21.ebuild:
  Version bump for beta channel release. Remove old.

*v8-3.4.12.1 (19 Jul 2011)

  19 Jul 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.4.3.ebuild,
  +v8-3.4.12.1.ebuild:
  Version bump for dev channel release. Remove old.

  30 Jun 2011; Thomas Kahle <tomka@gentoo.org> v8-3.2.10.21.ebuild:
  x86 stable per bug 373469

  30 Jun 2011; Markos Chandras <hwoarang@gentoo.org> v8-3.2.10.21.ebuild:
  Stable on amd64 wrt bug #373469

*v8-3.2.10.21 (29 Jun 2011)

  29 Jun 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.2.10.21.ebuild:
  Version bump for stable channel release.

*v8-3.4.6.2 (29 Jun 2011)

  29 Jun 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.4.6.2.ebuild:
  Version bump for dev channel release.

  21 Jun 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-3.2.10.15.ebuild:
  x86 stable wrt security bug #370627

*v8-3.4.3 (18 Jun 2011)

  18 Jun 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.1.8.12.ebuild,
  -v8-3.2.8.2.ebuild, +v8-3.4.3.ebuild:
  Version bump for dev channel release (fails tests). Remove old.

  08 Jun 2011; Markos Chandras <hwoarang@gentoo.org> v8-3.2.10.15.ebuild:
  Stable on amd64 wrt bug #370627

  08 Jun 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-3.2.10.15.ebuild: