@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/Attic/v8-3.2.10.21.ebuild,v 1.3 2011/06/30 12:06:19 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/Attic/v8-3.3.10.30.ebuild,v 1.1 2011/08/24 20:53:21 phajdan.jr Exp $
 
 EAPI="2"
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://gentoo/${P}.tar.gz"
 LICENSE="BSD"
 
 SLOT="0"
-KEYWORDS="amd64 ~arm x86"
+KEYWORDS="~amd64 ~arm ~x86"
 IUSE="readline"
 RESTRICT="test"
 
@@ -32,9 +32,6 @@ src_prepare() {
 
 	# Respect the user's CFLAGS, including the optimization level.
 	epatch "${FILESDIR}"/${PN}-no-O3-r0.patch
-
-	# Backport a compile fix.
-	epatch "${FILESDIR}"/${PN}-upstream-bug-1326-r0.patch
 
 	# Remove a test that is known to fail:
 	# http://groups.google.com/group/v8-users/browse_thread/thread/b8a3f42b5aa18d06
